--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "preview": "vue-cli-service preview"
     },
     "dependencies": {
         "axios": "^1.3.4",
