--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "element-ui": "^2.15.13",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
+        "prompt-msg": "^0.0.1",
         "vue": "^2.6.14"
     },
     "devDependencies": {
@@ -39,7 +40,8 @@
             "parser": "@babel/eslint-parser"
         },
         "rules": {
-            "no-debugger": "off"
+            "no-debugger": "off",
+            "no-unused-vars": "off"
         }
     },
     "browserslist": [
