--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     },
     "dependencies": {
         "axios": "^1.3.4",
+        "base-time": "^0.0.5",
         "core-js": "^3.8.3",
         "element-ui": "^2.15.13",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
-        "prompt-msg": "^0.0.1",
-        "timeformatconvert": "^0.0.2",
+        "prompt-msg": "^0.0.2",
         "vue": "^2.6.14"
     },
     "devDependencies": {
